# VRC-Group-Guardian

./: .gitignore  DASHBOARD_TASKS.md  README.md  ROADMAP.md  adb_error.txt  adb_log.txt  build_log_manual.txt  create_app_zip.py  demo_build_v2.py  fix_zip.py  pyproject.toml  requirements.txt  traceback.txt
.agent/: ANDROID_COMPATIBILITY_PLAN.md  OPTIMIZATION_ACTION_PLAN.md
.agent/workflows/: build-release.md  debug_with_adi.md  restart-app.md
src/: GroupGuardian.spec  __init__.py  api_cache.json  build_app.bat  cookies.json  debug_build.bat  final_build.bat  locate_flet.py  main.py  rebuild_and_install.bat  requirements.txt  storage.json
src/api/: __init__.py  auth.py  base.py  cache.py  client.py  client_backup.py  groups.py  images.py  invites.py  mock_client.py  request_handler.py  users.py  worlds.py
src/data/: guardian.db
src/services/: API_OPTIMIZATION.md  __init__.py  automod.py  cache_manager.py  database.py  debug_controller.py  debug_logger.py  event_bus.py  focus_debugger.py  instance_context.py  log_watcher.py  mock_log_watcher.py  notification_service.py  updater.py  watchlist_alerts.py  watchlist_service.py  websocket_pipeline.py  xsoverlay.py
src/ui/: theme.py
src/ui/components/: __init__.py  animated_background.py  bottom_nav.py  glass_card.py  neon_button.py  sidebar.py  stat_card.py  status_badge.py  tag_chip.py  title_bar.py  user_card.py
src/ui/dialogs/: __init__.py  automod_settings.py  confirm_dialog.py  data_folder_setup.py  update_dialog.py  user_details.py
src/ui/views/: bans.py  (+12 more)
src/utils/: analyze_focus.py  crypto.py  paths.py
(+4 files in other folders)
