[project]
name = "group-guardian"
version = "1.0.1"
description = "VRChat Group Moderation Automation Tool"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "flet>=0.25.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "loguru>=0.7.0",
    "keyring>=24.0.0",
    "appdirs>=1.4.4",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.flet]
org = "com.flet"
product = "group_guardian"
module = "main"

[tool.flet.app]
# Set path to src - this means all imports should be relative to src (no src. prefix)
path = "src"

[tool.flet.android]
adaptive_icon_background = "#1a1a2e"
